--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/news-list/news-list.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/news-list/news-list.component.html
@@ -1,5 +1,4 @@
 <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-  <mat-tab label="First">Content 1</mat-tab>
-  <mat-tab label="Second">Content 2</mat-tab>
-  <mat-tab label="Third">Content 3</mat-tab>
+  <mat-tab label="Yahoo Finance">{{yahooFinanceSub | async | json}}</mat-tab>
+  <mat-tab label="Seeking Alpha">{{seekingAlphaSub | async | json}}</mat-tab>  
 </mat-tab-group>
