--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -27,5 +27,7 @@
         ></app-portfolio-timechart>
       </ng-template>
     </mat-tab>
+     <mat-tab label="Yahoo Finance">{{yahooFinanceNews | json}}</mat-tab>
+  <mat-tab label="Seeking Alpha">{{seekingAlphaNews | json}}</mat-tab>  
   </mat-tab-group>
 </div>
