--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -27,7 +27,7 @@
         ></app-portfolio-timechart>
       </ng-template>
     </mat-tab>
-     <mat-tab label="Yahoo Finance">{{yahooFinanceNews | json}}</mat-tab>
-  <mat-tab label="Seeking Alpha">{{seekingAlphaNews | json}}</mat-tab>  
+     <mat-tab label="Yahoo Finance"><app-news-list [newsItems]="yahooFinanceNews"></app-news-list></mat-tab>
+  <mat-tab label="Seeking Alpha"><app-news-list [newsItems]="seekingAlphaNews"></app-news-list></mat-tab>  
   </mat-tab-group>
 </div>
