feat: use nbc news feed

--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -28,6 +28,6 @@
       </ng-template>
     </mat-tab>
      <mat-tab label="Yahoo Finance" i18n-label="@@portfolioChartsYahooFinance"><app-news-list [newsItems]="yahooFinanceNews"></app-news-list></mat-tab>
-  <mat-tab label="Cnn Finance" i18n-label="@@portfolioChartsCnnFinance"><app-news-list [newsItems]="cnnFinanceNews"></app-news-list></mat-tab>  
+  	 <mat-tab label="Cnbc Finance" i18n-label="@@portfolioChartsCnbcFinance"><app-news-list [newsItems]="cnbcFinanceNews"></app-news-list></mat-tab>  
   </mat-tab-group>
 </div>
