--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
@@ -15,6 +15,7 @@
       </div>
     </div>
     <ul class="list-style">
+    @if(!deleteSymbol) {
       <li>
         <mat-form-field class="form-field">
           <mat-label i18n="@@changeSymbolWeight">Weight</mat-label>
@@ -43,11 +44,16 @@
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
       </li>
+      } @else {
+      	<li>
+      		<div class="delete-text" i18n="@@changeSymbolDeleteSymbol">Delete Symbol ?</div>
+      	</li>      	
+      }
       <li>
         <button
           mat-button
           (click)="updateClick()"
-          [disabled]="symbolForm.pristine || symbolForm.invalid"
+          [disabled]="!deleteSymbol && (symbolForm.pristine || symbolForm.invalid)"
           tabindex="-1"
           i18n="@@ok"
         >
@@ -60,6 +66,15 @@
           i18n="@@cancel"
         >
           Cancel
+        </button>
+        <button class="delete-button"
+          mat-button
+          (click)="deleteClick()"
+          tabindex="-1"
+          i18n="@@delete"
+          *ngIf="!deleteSymbol"
+        >
+          Delete
         </button>
       </li>
     </ul>
