--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.scss
@@ -47,3 +47,13 @@
 .buttons-element {
   margin-top: 15px;
 }
+
+.delete-button {
+	float: right;
+	color: #f00;
+}
+
+.delete-text {
+	margin-bottom: 20px;
+	color: #f00;
+}
