--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -27,7 +27,11 @@
         ></app-portfolio-timechart>
       </ng-template>
     </mat-tab>
-     <mat-tab label="Yahoo Finance" i18n-label="@@portfolioChartsYahooFinance"><app-news-list [newsItems]="yahooFinanceNews"></app-news-list></mat-tab>
-  	 <mat-tab label="Cnbc Finance" i18n-label="@@portfolioChartsCnbcFinance"><app-news-list [newsItems]="cnbcFinanceNews"></app-news-list></mat-tab>  
+    <mat-tab label="Yahoo Finance" i18n-label="@@portfolioChartsYahooFinance"
+      ><app-news-list [newsItems]="yahooFinanceNews"></app-news-list
+    ></mat-tab>
+    <mat-tab label="Cnbc Finance" i18n-label="@@portfolioChartsCnbcFinance"
+      ><app-news-list [newsItems]="cnbcFinanceNews"></app-news-list
+    ></mat-tab>
   </mat-tab-group>
 </div>
