--- a/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/change-symbol/change-symbol.component.html
@@ -50,6 +50,21 @@
             Delete Symbol ?
           </div>
         </li>
+        <li>
+          <mat-form-field>
+            <mat-label i18n="@@changeSymbolChangeDate">change date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker1"
+              formControlName="{{ FormFields.ChangedAt }}"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="picker1"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+        </li>
       }
       <li>
         <button
