feat: show dividends

--- a/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-detail/components/symbol/symbol.component.html
@@ -30,6 +30,9 @@
       <span class="symbol-data" i18n="@@symbolClose"
         >Close: {{ symbolData?.close | number: "1.2-2" }}</span
       >
+      <span class="symbol-data" i18n="@@symbolAccDividend">
+      	Acc. Dividends: {{ symbolData?.accDividend | number: "1.2-2" }}
+      </span>
     </div>
     <div class="text-container">
       <span class="symbol-data" i18n="@@symbolCurrency"
