--- a/frontend/src/angular/src/styles.scss
+++ b/frontend/src/angular/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @use "@angular/material" as mat;
 
-@import "material-icons/iconfont/material-icons.scss";
+@use "material-icons/iconfont/material-icons.scss";
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
