feat: use new feed

--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -35,8 +35,8 @@
         ></app-portfolio-stats>
       </ng-template>
     </mat-tab>
-    <mat-tab label="Yahoo Finance" i18n-label="@@portfolioChartsYahooFinance"
-      ><app-news-list [newsItems]="yahooFinanceNews"></app-news-list
+    <mat-tab label="Seeking Alpha" i18n-label="@@portfolioChartsSeekingAlpha"
+      ><app-news-list [newsItems]="seekingAlphaNews"></app-news-list
     ></mat-tab>
     <mat-tab label="Cnbc Finance" i18n-label="@@portfolioChartsCnbcFinance"
       ><app-news-list [newsItems]="cnbcFinanceNews"></app-news-list
